Check the permission status first.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<script>
 			let permission = Notification.permission;
 
-			console.log('permission', first);
+			console.log('permission', permission);
 
 			if (permission === 'default') {
 				requestPermission();
