--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			}
 
 			button {
-				margin-top: 3rem;
+				margin-top: 2rem;
 				padding: 0.5rem;
 			}
 		</style>
@@ -38,17 +38,23 @@
 		<h1>재난정보서비스 테스트</h1>
 		<p>알림표시 권한을 허용 후 버튼을 클릭해주세요. <br />5초 후 알림이 갑니다.</p>
 		<button onclick="showNotification()">푸시알림 보내기</button>
+		<button class="requst" onclick="requestPermission()">Request permission</button>
+		<button class="check" onclick="checkStatus()">Check the status</button>
+		<p class="status"></p>
 		<script>
-			let permission = Notification.permission;
-
-			console.log('permission', permission);
-
 			if (permission === 'default') {
 				Notification.requestPermission();
 			} else if (permission === 'denied') {
 				alert('알림표시 권한이 허용되지 않았습니다.');
-			} else {
-				console.log(permission);
+			}
+
+			function checkStatus() {
+				const permissionStatus = Notification.permission;
+				document.querySelector('.status').innerHTML = permissionStatus;
+			}
+
+			function requestPermission() {
+				Notification.requestPermission();
 			}
 
 			function showNotification() {
@@ -66,7 +72,7 @@
 						notification.close();
 						window.location.href = './service.html';
 					};
-				}, 100);
+				}, 0);
 			}
 		</script>
 	</body>
