Add meta tag for android

--- a/service.html
+++ b/service.html
@@ -36,7 +36,7 @@
 	</head>
 	<body>
 		<h1>재난정보서비스 테스트</h1>
-		<p>알리 확인페이지 입니다.</p>
+		<p>알림 확인페이지 입니다.</p>
 		<button onclick="goHome()">메인페이지로 돌아가기</button>
 		<script>
 			function goHome() {
