--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="
+<html lang="ko">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,7 +11,7 @@
 		<link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5" />
 		<meta name="msapplication-TileColor" content="#da532c" />
 		<meta name="theme-color" content="#ffffff" />
-		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="mobile-web-app-capable" content="yes" />
 
 		<title>Notification</title>
 		<style>
@@ -35,13 +35,13 @@
 			}
 		</style>
 	</head>
+
 	<body>
-		<h1>재난정보서비스 테스트</h1>
+		<h1>재난정보서비스 테스트1</h1>
 
-    <script src="https://cdn.flarelane.com/WebSDK.js"></script>
-    <script>
-        FlareLane.initialize({ projectId: "8816df2d-cc6b-4e0c-b0dc-fb8d3bdc3520" });
-    </script>
-
+		<script src="https://cdn.flarelane.com/WebSDK.js"></script>
+		<script>
+			FlareLane.initialize({ projectId: '8816df2d-cc6b-4e0c-b0dc-fb8d3bdc3520' });
+		</script>
 	</body>
 </html>
