Add script to make full screen

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 		<script src="https://cdn.flarelane.com/WebSDK.js"></script>
 		<script>
 			FlareLane.initialize({ projectId: '8816df2d-cc6b-4e0c-b0dc-fb8d3bdc3520' });
+			window.addEventListener('load', function () {
+				setTimeout(function () {
+					// This hides the address bar:
+					window.scrollTo(0, 1);
+				}, 0);
+			});
 		</script>
 	</body>
 </html>
