--- a/index.html
+++ b/index.html
@@ -37,17 +37,52 @@
 	</head>
 
 	<body>
-		<h1>재난정보서비스 테스트1</h1>
+		<h1>재난정보서비스 테스트3</h1>
 
 		<script src="https://cdn.flarelane.com/WebSDK.js"></script>
 		<script>
+			(function (win) {
+				var doc = win.document;
+
+				// If there's a hash, or addEventListener is undefined, stop here
+				if (!win.navigator.standalone && !location.hash && win.addEventListener) {
+					//scroll to 1
+					win.scrollTo(0, 1);
+					var scrollTop = 1,
+						getScrollTop = function () {
+							return (
+								win.pageYOffset ||
+								(doc.compatMode === 'CSS1Compat' && doc.documentElement.scrollTop) ||
+								doc.body.scrollTop ||
+								0
+							);
+						},
+						//reset to 0 on bodyready, if needed
+						bodycheck = setInterval(function () {
+							if (doc.body) {
+								clearInterval(bodycheck);
+								scrollTop = getScrollTop();
+								win.scrollTo(0, scrollTop === 1 ? 0 : 1);
+							}
+						}, 15);
+
+					win.addEventListener(
+						'load',
+						function () {
+							setTimeout(function () {
+								//at load, if user hasn't scrolled more than 20 or so...
+								if (getScrollTop() < 20) {
+									//reset to hide addr bar at onload
+									win.scrollTo(0, scrollTop === 1 ? 0 : 1);
+								}
+							}, 0);
+						},
+						false
+					);
+				}
+			})(this);
+
 			FlareLane.initialize({ projectId: '8816df2d-cc6b-4e0c-b0dc-fb8d3bdc3520' });
-			window.addEventListener('load', function () {
-				setTimeout(function () {
-					// This hides the address bar:
-					window.scrollTo(0, 1);
-				}, 0);
-			});
 		</script>
 	</body>
 </html>
