--- a/index.html
+++ b/index.html
@@ -12,20 +12,32 @@
 		<meta name="msapplication-TileColor" content="#da532c" />
 		<meta name="theme-color" content="#ffffff" />
 		<meta name="mobile-web-app-capable" content="yes" />
-
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/screenfull.js/5.1.0/screenfull.min.js"
+			integrity="sha512-SGPHIoS+NsP1NUL5RohNpDs44JlF36tXLN6H3Cw+EUyenEc5zPXWqfw9D+xmvR00QYUYewQIJQ6P5yH82Vw6Fg=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
 		<title>Notification</title>
 		<style>
 			body {
 				width: 100vw;
 				height: 100vh;
 				margin: 0;
-				padding: 0;
-				background-color: black;
+				background-color: gray;
 				color: white;
+			}
+
+			.box {
+				background-color: black;
+				box-sizing: border-box;
+				border: 1px solid red;
+				margin-top: 48px;
+				width: 100%;
+				height: 100%;
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
-				align-items: center;
 				text-align: center;
 			}
 
@@ -37,52 +49,19 @@
 	</head>
 
 	<body>
-		<h1>재난정보서비스 테스트3</h1>
+		<div class="box">
+			<h1>재난정보서비스 테스트4</h1>
+		</div>
 
 		<script src="https://cdn.flarelane.com/WebSDK.js"></script>
 		<script>
-			(function (win) {
-				var doc = win.document;
-
-				// If there's a hash, or addEventListener is undefined, stop here
-				if (!win.navigator.standalone && !location.hash && win.addEventListener) {
-					//scroll to 1
-					win.scrollTo(0, 1);
-					var scrollTop = 1,
-						getScrollTop = function () {
-							return (
-								win.pageYOffset ||
-								(doc.compatMode === 'CSS1Compat' && doc.documentElement.scrollTop) ||
-								doc.body.scrollTop ||
-								0
-							);
-						},
-						//reset to 0 on bodyready, if needed
-						bodycheck = setInterval(function () {
-							if (doc.body) {
-								clearInterval(bodycheck);
-								scrollTop = getScrollTop();
-								win.scrollTo(0, scrollTop === 1 ? 0 : 1);
-							}
-						}, 15);
-
-					win.addEventListener(
-						'load',
-						function () {
-							setTimeout(function () {
-								//at load, if user hasn't scrolled more than 20 or so...
-								if (getScrollTop() < 20) {
-									//reset to hide addr bar at onload
-									win.scrollTo(0, scrollTop === 1 ? 0 : 1);
-								}
-							}, 0);
-						},
-						false
-					);
-				}
-			})(this);
-
 			FlareLane.initialize({ projectId: '8816df2d-cc6b-4e0c-b0dc-fb8d3bdc3520' });
+			window.addEventListener('load', function () {
+				setTimeout(function () {
+					// This hides the address bar:
+					window.scrollTo(0, 48);
+				}, 0);
+			});
 		</script>
 	</body>
 </html>
