--- a/index.html
+++ b/index.html
@@ -24,20 +24,13 @@
 				width: 100vw;
 				height: 100vh;
 				margin: 0;
-				background-color: gray;
-				color: white;
-			}
-
-			.box {
+				padding: 0;
 				background-color: black;
-				box-sizing: border-box;
-				border: 1px solid red;
-				margin-top: 48px;
-				width: 100%;
-				height: 100%;
+				color: white;
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
+				align-items: center;
 				text-align: center;
 			}
 
@@ -49,18 +42,18 @@
 	</head>
 
 	<body>
-		<div class="box">
-			<h1>재난정보서비스 테스트4</h1>
-		</div>
-
+		<h1>재난정보서비스 테스트4</h1>
+		<button id="button">전체화면</button>
 		<script src="https://cdn.flarelane.com/WebSDK.js"></script>
 		<script>
 			FlareLane.initialize({ projectId: '8816df2d-cc6b-4e0c-b0dc-fb8d3bdc3520' });
-			window.addEventListener('load', function () {
-				setTimeout(function () {
-					// This hides the address bar:
-					window.scrollTo(0, 48);
-				}, 0);
+
+			document.getElementById('button').addEventListener('click', () => {
+				if (screenfull.isEnabled) {
+					screenfull.request();
+				} else {
+					// Ignore or do something else
+				}
 			});
 		</script>
 	</body>
